--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="LUXe - Modern Fashion Stop" />
+    <meta property="og:title" content="LUXE - Modern Fashion Stop" />
     <meta property="og:description" content="Discover premium fashion and contemporary clothing at LUXE" />
     <meta property="og:type" content="website" />
 
